sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:14: error: ';' expected but '<-' found.
     fori<-nbr-2 to 0 by -1){
         ^